<resources>
    <string name="app_name">TopeFirstApplication</string>
    <string name="inventory_system_text">Inventory made Simple</string>
    <string name="standard_package_description">Get started with standard package for free</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_category">Category</string>
    <string name="number_of_item"># of items in store</string>
    <string name="item_value">22,346</string>
    <string name="item_text">Items</string>
    <string name="store_items_text">Store Items</string>
    <string name="product_name">Mamadol Oil</string>
    <string name="product_prize">#1500.00</string>
    <string name="product_date">12th of March 2020</string>
    <string name="product_barcode_text">CE7634</string>
    <string name="update_profile">Update Profile</string>
    <string name="phone_number">+2345555555</string>
    <string name="email">admin@inventory.com</string>
    <string name="full_name">Admin admin</string>
    <string name="contact_information">Contact Information</string>
    <string name="admin_details">Admin Details</string>
    <string name="number_of_item_in_category"># of items in Category</string>
    <string name="add_item">Add New Item</string>
    <string name="add_product">Add new store product</string>
    <string name="cancel">Cancel</string>
    <string name="add_products">Add Product</string>
    <string name="product_title">Enter Product Name</string>
    <string name="product_price_text">Enter Product Price</string>
    <string name="product_barcode">Enter Product Barcode</string>

    <string-array name="product_category">
        <item>Select Category</item>
        <item>Provisions</item>
        <item>Toiletries</item>
        <item>Drinks</item>
        <item>Clothing Item</item>
    </string-array>

</resources>