<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dev.topefirstapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard"
        app:startDestination="@id/action_navigation_dashboard_to_createProductDialogFragment">
        <action
            android:id="@+id/action_navigation_dashboard_to_createProductDialogFragment"
            app:destination="@id/createProductDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.dev.topefirstapplication.ui.inventory.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.dev.topefirstapplication.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.dev.topefirstapplication.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/createProductDialogFragment"
        android:name="com.dev.topefirstapplication.ui.dashboard.CreateProductDialogFragment"
        android:label="CreateProductDialogFragment" />

</navigation>