<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="spUsage"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view_1"
        android:layout_width="0dp"
        android:layout_height="1dip"
        android:layout_marginTop="8dp"
        android:background="@color/product_details_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <ImageView
        android:id="@+id/start_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/image_circle_backgroud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/product_name"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textSize="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/product_name"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/start_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:text="@string/product_prize"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/product_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:textSize="14dp"
        android:gravity="center_vertical"
        android:text="@string/product_barcode_text"
        android:textColor="@color/product_details_grey"
        app:layout_constraintStart_toEndOf="@+id/start_image"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />


    <TextView
        android:id="@+id/date_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="14dp"
        android:gravity="center_vertical"
        android:text="@string/product_date"
        android:textColor="@color/product_details_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price" />


</androidx.constraintlayout.widget.ConstraintLayout>