<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/popUpDialog"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_gravity="bottom"
    android:background="@drawable/add_lesson_dailog_background"
    tools:ignore="spUsage,RtlCompat,RtlSymmetry,TextFields,autofill">

    <TextView
        android:id="@+id/add_product_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/add_product"
        android:textColor="@color/home_username_text_color"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="16dp"
        android:focusableInTouchMode="true"
        android:hint="@string/product_title"
        android:inputType="text"
        android:textColor="@color/colorEditTextInput"
        android:textColorHint="@color/colorEditTextInput"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_product_text" />

    <Spinner
        android:id="@+id/product_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="16dp"
        android:drawablePadding="16dp"
        android:textColor="@color/colorEditTextInput"
        android:textColorHint="@color/colorEditTextInput"
        android:textSize="16dp"
        android:entries="@array/product_category"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_title_edit_text" />

    <EditText
        android:id="@+id/product_price_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="16dp"
        android:focusableInTouchMode="true"
        android:hint="@string/product_price_text"
        android:inputType="text"
        android:textColor="@color/colorEditTextInput"
        android:textColorHint="@color/colorEditTextInput"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_category_spinner" />

    <EditText
        android:id="@+id/product_barcode_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="16dp"
        android:focusableInTouchMode="true"
        android:hint="@string/product_barcode"
        android:inputType="text"
        android:textColor="@color/colorEditTextInput"
        android:textColorHint="@color/colorEditTextInput"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price_edit_text" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/product_button_background_grey"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_product_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/app_button_background_blue"
        android:text="@string/add_products"
        android:textColor="@android:color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button" />

    <include
        android:id="@+id/loader"
        layout="@layout/view_loader"
        android:visibility="gone"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>