<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription, RtlHardcoded, spUsage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_card_view"
        android:layout_width="match_parent"
        android:background="@drawable/home_page_top_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.30"
        tools:ignore="spUsage"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/settings_overview"
            android:text="@string/title_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/home_username_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/admin_information"
            android:text="@string/admin_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="60dp"
            android:textSize="20dp"
            android:textColor="@color/settings_page_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_overview"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/image_placeholder"
            app:civ_border_width="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_overview"
            app:civ_border_color="#FFFFFF"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            tools:ignore="RtlSymmetry,TextFields,autofill">

            <TextView
                android:id="@+id/account_text"
                android:text="@string/contact_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:textColor="@color/account_details_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/settings_edit_text_background"
                android:hint="@string/full_name"
                android:inputType="text"
                android:paddingStart="16dp"
                android:textColor="@color/colorEditTextInput"
                android:textColorHint="@color/colorEditTextInput"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_text"
                app:layout_goneMarginTop="16dp"
                android:paddingLeft="16dp" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:hint="@string/email"
                android:textColorHint="@color/colorEditTextInput"
                android:inputType="text"
                android:textColor="@color/colorEditTextInput"
                android:textSize="14dp"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/settings_edit_text_background"
                app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:hint="@string/phone_number"
                android:textColorHint="@color/colorEditTextInput"
                android:textColor="@color/colorEditTextInput"
                android:textSize="14dp"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/settings_edit_text_background"
                app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_button_background_blue"
                android:text="@string/update_profile"
                android:textSize="14dp"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_edit_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>