<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="spUsage"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_part"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/number_of_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/color_deep_blue"
            android:text="@string/number_of_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number_of_items_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="55dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/item_value"
            android:textColor="@color/color_deep_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_of_items_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintTop_toBottomOf="@+id/top_part">

        <TextView
            android:id="@+id/item_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:text="@string/item_text"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_1"
            android:layout_width="20dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_secondary"
            app:layout_constraintTop_toBottomOf="@+id/item_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/category_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/title_category"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/item_text"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_2"
            android:layout_width="20dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintStart_toStartOf="@+id/category_text" />

        <TextView
            android:id="@+id/store_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:textSize="15dp"
            android:gravity="center_vertical"
            android:text="@string/store_items_text"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_recycler_view"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/store_items_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_store_product_list"
            android:layout_height="0dp">

        </androidx.recyclerview.widget.RecyclerView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_item_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_add"
            app:tint="@android:color/white"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            android:layout_marginBottom="36dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>