<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:ignore="spUsage"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_part"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/off_white"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/number_of_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/color_deep_blue"
            android:text="@string/number_of_item_in_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number_of_items_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="55dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            tools:text="@string/item_value"
            android:textColor="@color/color_deep_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_of_items_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintTop_toBottomOf="@+id/top_part">

        <TextView
            android:id="@+id/category_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/title_category"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_1"
            android:layout_width="20dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_recycler_view"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:overScrollMode="never"
            android:orientation="horizontal"
            tools:listitem="@layout/item_store_category_list"
            android:layout_height="250dp">

        </androidx.recyclerview.widget.RecyclerView>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/app_button_background_blue"
            android:text="@string/add_item"
            android:textSize="14dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_recycler_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>